# rabbitmq-cxx

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile.in
examples/: advconsumer.cpp  consumer.cpp  publisher.cpp
include/: rmqcxx.hpp
include/rmqcxx/: AMQPStruct.hpp  Channel.hpp  Connection.hpp  Envelope.hpp  Exceptions.hpp  Exchange.hpp  FieldValue.hpp  Message.hpp  Queue.hpp  ReturnedMessage.hpp  Table.hpp  TableEntry.hpp  Timeout.hpp  util.hpp
tests/performance/: consumer.cpp  publisher.cpp
tests/unit/: AMQPStructTests.cpp  ChannelTest.hpp  ChannelTests.cpp  ConnectionTest.hpp  ConnectionTests.cpp  EnvelopeTests.cpp  ExchangeTests.cpp  MessageTests.cpp  MockAMQP.cpp  MockAMQP.hpp  QueueTests.cpp  ReturnedMessageTests.cpp  TableEntryTests.cpp  comparison.cpp  comparison.hpp  main.cpp
